# parallelizm

./: CMakeLists.txt  README.md  cmake_cleanup.sh  main.cpp
include/: matrices.h  max_concurrent.h  profiler.h  simple.h
profiler/: .profiler.h.swp  profiler.h
src/: linear.cpp  max_concurrent.cpp  simple.cpp
suite/: matrices.h  simple.cpp
